feat: product listing done

--- a/day2/index.html
+++ b/day2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+
     <!-- Header Section -->
     <header>
 
@@ -27,11 +29,20 @@
                     <li><a href="#blog">Blog</a></li>
                 </ul>
                 <button class="btn-primary">Contact us</button>
+                <i class="fa-solid fa-cart-shopping cart-icon"></i>
             </div>
         </nav>
     </header>
 
 
+    <main>
+        <div class="product-container" id="product-container">
+
+        </div>
+    </main>
+
+
     <script src="./cartCalculator.js"></script>
 </body>
+
 </html>
