feat: add cart and improve UI

--- a/day2/index.html
+++ b/day2/index.html
@@ -36,8 +36,36 @@
 
 
     <main>
-        <div class="product-container" id="product-container">
+        <div class="container">
+            <div class="product-container" id="product-container">
 
+            </div>
+
+            <div id="cart-table-container">
+                <h2>Cart</h2>
+                <table class="cart-table" id="cart-table">
+                    <tbody>
+                        <tr>
+                            <td>Subtotal</td>
+                            <td>$ 0.00</td>
+                        </tr>
+                        <tr>
+                            <td>Quantity Discount (10%)</td>
+                            <td>- $ 0.00</td>
+                        </tr>
+                        <tr>
+                            <td>Price Discount (5%)</td>
+                            <td>- $ 0.00</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Final Total</strong></td>
+                            <td><strong>$ 0.00</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button class="reset-cart" id="reset-cart-btn">Clear Cart</button>
+            </div>
         </div>
     </main>
 
