--- a/day2/index.html
+++ b/day2/index.html
@@ -42,7 +42,10 @@
             </div>
 
             <div id="cart-table-container">
-                <h2>Cart</h2>
+                <h2>Your Cart</h2>
+                <div class="cart-products" id="cart-products">
+                    
+                </div>
                 <table class="cart-table" id="cart-table">
                     <tbody>
                         <tr>
