Day3/feat: displaying submitted data

--- a/day3/index.html
+++ b/day3/index.html
@@ -16,6 +16,9 @@
     </header>
 
     <div class="container" id="container">
+
+        <h1>Dynamic Form with JSON Display & Theme Toggle</h1>
+
         <form id="user-form">
             <div class="form-group">
                 <label for="name">Name:</label>
@@ -104,6 +107,9 @@
 
             <button type="submit">Submit</button>
         </form>
+
+        <h2>Submitted Form (JSON Format)</h2>
+        <pre id="display-box">[]</pre>
     </div>
 
     <script src="./script.js"></script>
