Day3/feat: Validations added

--- a/day3/index.html
+++ b/day3/index.html
@@ -108,8 +108,10 @@
             <button type="submit">Submit</button>
         </form>
 
-        <h2>Submitted Form (JSON Format)</h2>
-        <pre id="display-box">[]</pre>
+        <div class="data-container">
+            <h2>Submitted Form (JSON Format)</h2>
+            <pre id="display-box">[]</pre>
+        </div>
     </div>
 
     <script src="./script.js"></script>
