--- a/day3/index.html
+++ b/day3/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="light-theme">
+<body>
     <header>
         <div>
-            <button id="theme-toggle">Switch to Dark Mode</button>
+            <button id="theme-toggle"></button>
         </div>
     </header>
 
